k8s-website.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: k8s-api-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: k8s-api
  template:
    metadata:
      labels:
        app: k8s-api
    spec:
      containers:
        - image: k8s-api:api
          name: k8s-api
---
apiVersion: v1
kind: Service
metadata:
  name: k8s-api-service
spec:
  selector:
    app: k8s-api
  ports:
    - port: 80
      targetPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: k8s-web-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: k8s-web
  template:
    metadata:
      labels:
        app: k8s-web
    spec:
      containers:
        - image: k8s-web:web
          name: k8s-web
---
apiVersion: v1
kind: Service
metadata:
  name: k8s-web-service
spec:
  selector:
    app: k8s-web
  ports:
    - port: 80
      targetPort: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: k8s-ingress
spec:
  rules:
    - host: k8s-website
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: k8s-web-service
                port:
                  number: 80
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: k8s-api-service
                port:
                  number: 80
